--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 
 {
-	"name": "测试PWA",
-	"start_url": "/index.html",
+	"name": "PWA",
+	"start_url": "www.iftiger.com",
 	"display": "standalone",
 	"icons": [
 		{
